--- a/work.css
+++ b/work.css
@@ -347,10 +347,19 @@ body {
   background-color: white; }
 
 /* line 98, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+.dark {
+  background-color: #F4F6F7; }
+
+/* line 102, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+.light {
+  background-color: #f7f8f9; }
+
+/* line 106, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .nobottompadding {
+  padding-top: 0 !important;
   padding-bottom: 0 !important; }
 
-/* line 103, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 112, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h1 {
   font-family: "freight-sans-pro", sans-serif;
   font-weight: 400;
@@ -359,7 +368,7 @@ article h1 {
   font-size: 3.2rem;
   line-height: 1; }
 
-/* line 111, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 120, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h2 {
   font-family: "freight-sans-pro", sans-serif;
   font-style: italic;
@@ -368,7 +377,7 @@ article h2 {
   font-size: 2.2rem;
   line-height: 1; }
 
-/* line 119, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 128, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h3 {
   font-family: "freight-sans-pro", sans-serif;
   font-style: italic;
@@ -377,7 +386,7 @@ article h3 {
   margin-top: 2.0rem;
   line-height: 1.23; }
 
-/* line 127, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 136, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article hr {
   display: block;
   height: 1px;
@@ -387,12 +396,12 @@ article hr {
   margin: 1em 0;
   padding: 0; }
 
-/* line 137, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 146, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h1, article h2, article h3, article h4 {
   font-style: normal;
   font-weight: bold; }
 
-/* line 143, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 152, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 p.subtitle {
   font-style: italic;
   margin-top: 1rem;
@@ -401,36 +410,38 @@ p.subtitle {
   display: block;
   line-height: 1; }
 
-/* line 152, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 161, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .numeral {
   font-family: et-book-roman-old-style; }
 
-/* line 156, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 165, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .danger {
   color: red; }
 
-/* line 160, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 169, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   position: relative;
   padding: 5rem 0rem; }
 
-/* line 165, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 174, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 166, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 175, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
+    margin-top: 1rem;
+    padding-left: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 170, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 181, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul,
   article dd,
   article dt {
     font-size: 1.06rem; }
-  /* line 178, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article dd,
   article dt {
@@ -440,51 +451,51 @@ article {
     margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 200, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p, article dd {
     font-family: "ff-tisa-web-pro", serif !important; }
-  /* line 193, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 204, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-family: "freight-sans-pro", sans-serif !important; }
-  /* line 197, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 208, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-weight: bold; }
-  /* line 201, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 212, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 1.86rem; }
-  /* line 206, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 217, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .firstpara {
     text-indent: inherit !important; }
-  /* line 210, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 221, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 1.86rem; }
-  /* line 215, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 218, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 229, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 1.86rem;
     margin-bottom: 1.86rem; }
-  /* line 222, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 233, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 237, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 229, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 240, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 233, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 237, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 248, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 60%;
     margin-right: 40px; }
-  /* line 241, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 252, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 1.86rem;
     width: 60% !important;
@@ -492,17 +503,17 @@ article {
     text-align: right !important;
     font-family: "ff-tisa-web-pro", serif;
     color: inherit; }
-  /* line 249, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 260, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 255, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 266, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0;
     font-family: "ff-tisa-web-pro", serif; }
-  /* line 259, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -513,7 +524,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 1.86rem 0 1.86rem 0; }
-  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -524,17 +535,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 282, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 293, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 1.86rem; }
-  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 297, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 290, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 301, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 294, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 305, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -547,25 +558,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 310, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 321, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 315, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 326, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 316, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 327, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 323, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 334, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 344, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 337, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 348, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -578,42 +589,42 @@ article {
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 351, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 355, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 363, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 374, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 370, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 381, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 375, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 382, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 393, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article dd,
   article dt {
     width: 65%; }
-  /* line 389, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 400, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article table {
     width: 65% !important; }
-  /* line 393, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .twocolumnlist {
     -webkit-column-count: 2;
     -moz-column-count: 2;
@@ -625,42 +636,42 @@ article {
     -ms-column-gap: 3em;
     -o-column-gap: 3em;
     column-gap: 3em; }
-  /* line 406, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 417, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .redline {
     color: red;
     background-color: yellow; }
-  /* line 411, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 416, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 427, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 421, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 432, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 426, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 437, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 439, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 450, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 443, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 454, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 449, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 460, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 454, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 465, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -669,75 +680,75 @@ article {
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 469, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 480, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 473, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 484, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 478, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 489, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 483, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 494, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 487, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 498, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 491, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 502, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 /* @group Desktop Only */
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
-  /* line 498, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 509, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 15px; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 505, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 516, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 512, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 523, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     width: 100%; }
-  /* line 515, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 526, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer {
     width: 100%; }
-  /* line 519, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 530, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     width: 97%; }
-  /* line 522, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 533, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article ul {
     width: 85%; }
-  /* line 525, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 536, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     max-width: 90%; }
-  /* line 528, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 539, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption,
   article figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 533, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 544, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 537, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 548, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p,
   article blockquote footer {
     width: 100%; }
-  /* line 541, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 552, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 544, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 555, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     display: none; }
-  /* line 548, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 559, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .margin-toggle:checked + .sidenote,
   article .margin-toggle:checked + .marginnote {
     display: block;
@@ -748,14 +759,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 559, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 570, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label {
     cursor: pointer; }
-  /* line 562, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 573, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper,
   article table {
     width: 85%; }
-  /* line 566, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 577, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     width: 100%; } }
 
