--- a/tufte2.css
+++ b/tufte2.css
@@ -98,11 +98,11 @@ body {
 
 /* line 98, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .dark {
-  background-color: #F4F6F7; }
+  background-color: white; }
 
 /* line 102, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .light {
-  background-color: #f7f8f9; }
+  background-color: white; }
 
 /* line 106, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .nobottompadding {
@@ -181,7 +181,6 @@ article {
   /* line 175, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     margin-top: 1rem;
-    padding-left: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem; }
   /* line 181, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
@@ -203,49 +202,53 @@ article {
     vertical-align: baseline; }
   /* line 200, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p, article dd {
+    padding-right: 9rem;
+    padding-right: 9rem; }
+  /* line 205, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article p, article dd {
     font-family: "ff-tisa-web-pro", serif !important; }
-  /* line 204, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 209, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-family: "freight-sans-pro", sans-serif !important; }
-  /* line 208, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-weight: bold; }
-  /* line 212, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 217, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 1.86rem; }
-  /* line 217, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 222, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .firstpara {
     text-indent: inherit !important; }
-  /* line 221, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 1.86rem; }
-  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 231, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 229, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 234, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 1.86rem;
     margin-bottom: 1.86rem; }
-  /* line 233, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 238, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 237, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 242, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 240, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 245, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 249, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 248, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 253, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 60%;
     margin-right: 40px; }
-  /* line 252, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 257, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 1.86rem;
     width: 60% !important;
@@ -253,17 +256,17 @@ article {
     text-align: right !important;
     font-family: "ff-tisa-web-pro", serif;
     color: inherit; }
-  /* line 260, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 265, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 266, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 271, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0;
     font-family: "ff-tisa-web-pro", serif; }
-  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 275, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -274,7 +277,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 1.86rem 0 1.86rem 0; }
-  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -285,17 +288,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 293, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 298, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 1.86rem; }
-  /* line 297, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 302, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 301, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 306, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 305, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 310, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -308,25 +311,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 321, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 326, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 326, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 331, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 327, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 332, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 334, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 339, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 344, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 349, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 348, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 353, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -339,42 +342,42 @@ article {
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 367, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 374, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 379, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 381, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 391, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 393, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 398, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article dd,
   article dt {
     width: 65%; }
-  /* line 400, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 405, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article table {
     width: 65% !important; }
-  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 409, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .twocolumnlist {
     -webkit-column-count: 2;
     -moz-column-count: 2;
@@ -386,42 +389,42 @@ article {
     -ms-column-gap: 3em;
     -o-column-gap: 3em;
     column-gap: 3em; }
-  /* line 417, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .redline {
     color: red;
     background-color: yellow; }
-  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 427, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 427, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 432, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 432, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 437, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 437, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 442, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 450, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 455, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 454, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 459, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 460, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 465, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 465, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 470, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -430,75 +433,75 @@ article {
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 480, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 485, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 484, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 489, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 489, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 494, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 494, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 499, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 498, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 503, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 502, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 507, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 /* @group Desktop Only */
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
-  /* line 509, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 514, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 15px; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 516, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 521, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 523, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 528, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     width: 100%; }
-  /* line 526, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 531, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer {
     width: 100%; }
-  /* line 530, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 535, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     width: 97%; }
-  /* line 533, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 538, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article ul {
     width: 85%; }
-  /* line 536, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 541, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     max-width: 90%; }
-  /* line 539, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 544, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption,
   article figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 544, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 549, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 548, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 553, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p,
   article blockquote footer {
     width: 100%; }
-  /* line 552, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 557, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 555, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 560, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     display: none; }
-  /* line 559, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 564, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .margin-toggle:checked + .sidenote,
   article .margin-toggle:checked + .marginnote {
     display: block;
@@ -509,14 +512,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 570, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 575, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label {
     cursor: pointer; }
-  /* line 573, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 578, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper,
   article table {
     width: 85%; }
-  /* line 577, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 582, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     width: 100%; } }
 
