Fix iphone responsive bug in code

--- a/tufte2.scss
+++ b/tufte2.scss
@@ -1,6 +1,6 @@
 @import 'variable.scss';
 
-$selected-stack: $serif-stac0; // $fftisaserif-stack;
+$selected-stack: $font-stack; // $serif-stac0; // $fftisaserif-stack;
 $header-stack: $freightsanspro-stack; // $lucidagrande-stack;// $selected-stack;
 $width: 50%;
 $sidenotemargin: -($width+10%);
