Made some progress in writing the portfolio design page

--- a/tufte2.scss
+++ b/tufte2.scss
@@ -34,7 +34,7 @@ html {
     width: 100%;
 }
 
-.competitive-table, .playtest-table, .heuristic-table, .design_improvements_table {
+.competitive-table, .playtest-table, .heuristic-table, .design_improvements_table, .w_pd_ia_table {
 
         margin-top: $ledding;
 
